RESOLVED FIXED199798
REGRESSION: Chase app crashes immediately after authentication
https://bugs.webkit.org/show_bug.cgi?id=199798
Summary REGRESSION: Chase app crashes immediately after authentication
Wenson Hsieh
Reported 2019-07-15 09:07:38 PDT
Attachments
Patch (1.69 KB, patch)
2019-07-15 09:35 PDT, Wenson Hsieh
no flags
Archive of layout-test-results from ews212 for win-future (13.46 MB, application/zip)
2019-07-15 11:42 PDT, EWS Watchlist
no flags
Wenson Hsieh
Comment 1 2019-07-15 09:35:21 PDT
EWS Watchlist
Comment 2 2019-07-15 11:42:50 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 3 2019-07-15 11:42:54 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 4 2019-07-15 11:45:12 PDT
(In reply to Build Bot from comment #2) > Comment on attachment 374117 [details] > Patch > > Attachment 374117 [details] did not pass win-ews (win): > Output: https://webkit-queues.webkit.org/results/12743666 > > New failing tests: > http/tests/css/filters-on-iframes-transform.html …definitely not related, given that the code change is Cocoa-only.
WebKit Commit Bot
Comment 5 2019-07-15 11:50:35 PDT
Comment on attachment 374117 [details] Patch Clearing flags on attachment: 374117 Committed r247436: <https://trac.webkit.org/changeset/247436>
WebKit Commit Bot
Comment 6 2019-07-15 11:50:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.